--- a/bin/application/Sample.fxml
+++ b/bin/application/Sample.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
+<BorderPane prefHeight="555.0" prefWidth="680.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
    <bottom>
       <HBox alignment="center" prefHeight="75.0" prefWidth="436.0" BorderPane.alignment="BOTTOM_CENTER">
          <padding>
@@ -23,9 +23,9 @@
       </HBox>
    </bottom>
    <right>
-      <VBox alignment="CENTER_LEFT" prefHeight="260.0" prefWidth="162.0" spacing="10.0" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER_LEFT" prefHeight="450.0" prefWidth="240.0" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fx:id="histogram" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="histogram" fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Controls">
                <font>
                   <Font name="System Bold" size="16.0" />
@@ -35,10 +35,11 @@
             <CheckBox fx:id="logoCheckBox" mnemonicParsing="false" onAction="#loadLogo" text="Show Logo" />
             <CheckBox fx:id="haarClassifier" mnemonicParsing="false" onAction="#haarSelected" text="Haar Classifier" />
             <CheckBox fx:id="lbpClassifier" mnemonicParsing="false" onAction="#lbpSelected" text="LBP Classifier" />
+            <CheckBox fx:id="decryptCheck" mnemonicParsing="false" text="Decrypt Video" />
             <HBox alignment="CENTER" prefHeight="29.0" prefWidth="200.0">
                <children>
                   <Label prefHeight="17.0" prefWidth="140.0" text="Encryption Percentage" />
-                  <TextField fx:id="encText" prefHeight="25.0" prefWidth="58.0" />
+                  <TextField fx:id="encText" prefHeight="25.0" prefWidth="100.0" />
                </children>
             </HBox>
             <Slider fx:id="encPercent" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
