--- a/src/application/ServerWindow.fxml
+++ b/src/application/ServerWindow.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="555.0" prefWidth="680.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ClientController">
+<BorderPane prefHeight="555.0" prefWidth="680.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ServerController">
    <bottom>
       <HBox alignment="center" prefHeight="75.0" prefWidth="436.0" BorderPane.alignment="BOTTOM_CENTER">
          <padding>
