--- a/src/application/UserWindow.fxml
+++ b/src/application/UserWindow.fxml
@@ -20,7 +20,7 @@
          <padding>
             <Insets bottom="25" left="25" right="25" top="25" />
          </padding>
-         <Button fx:id="saveSnapshot" mnemonicParsing="false" prefHeight="39.0" prefWidth="31.0">
+         <Button fx:id="snapButton" mnemonicParsing="false" prefHeight="39.0" prefWidth="31.0">
             <graphic>
                <ImageView fitHeight="15.0" fitWidth="15.0" pickOnBounds="true" preserveRatio="true">
                   <image>
@@ -30,9 +30,9 @@
             </graphic>
          </Button>
          <Button fx:id="cameraButton" alignment="CENTER" contentDisplay="BOTTOM" onAction="#startCamera" prefHeight="33.0" prefWidth="85.0" text="Start Camera" />
-         <Button fx:id="buttonRecord" mnemonicParsing="false" onAction="#recordVideo" prefWidth="36.0">
+         <Button fx:id="recordButton" mnemonicParsing="false" onAction="#recordVideo" prefWidth="36.0">
             <graphic>
-               <ImageView fx:id="iconRecord" fitHeight="20.0" fitWidth="56.0" pickOnBounds="true" preserveRatio="true">
+               <ImageView fx:id="recordIcon" fitHeight="20.0" fitWidth="56.0" pickOnBounds="true" preserveRatio="true">
                   <image>
                      <Image url="@../../resources/record.png" />
                   </image>
