--- a/bin/application/CameraWindow.fxml
+++ b/bin/application/CameraWindow.fxml
@@ -42,7 +42,7 @@
                   <TextField fx:id="encPercent" prefHeight="25.0" prefWidth="100.0" />
                </children>
             </HBox>
-            <Slider fx:id="encSlider" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
+            <Slider fx:id="encSlider" majorTickUnit="10.0" minorTickCount="9" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
          </children>
          <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
