--- a/src/application/UserWindow.fxml
+++ b/src/application/UserWindow.fxml
@@ -16,7 +16,7 @@
 
 <BorderPane prefHeight="555.0" prefWidth="680.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.UserController">
    <bottom>
-      <HBox alignment="center" spacing="10" prefHeight="75.0" prefWidth="436.0" BorderPane.alignment="BOTTOM_CENTER">
+      <HBox alignment="center" prefHeight="75.0" prefWidth="436.0" spacing="10" BorderPane.alignment="BOTTOM_CENTER">
          <padding>
             <Insets bottom="25" left="25" right="25" top="25" />
          </padding>
@@ -61,7 +61,7 @@
                   <TextField fx:id="encPercent" prefHeight="25.0" prefWidth="100.0" />
                </children>
             </HBox>
-            <Slider fx:id="encSlider" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
+            <Slider fx:id="encSlider" majorTickUnit="10.0" minorTickCount="9" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
          </children>
          <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
